fixed scrolling issues on firefox

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -18,6 +18,7 @@
   margin-bottom: 0;
   font-size: 5em;
   font-weight:700;
+  height: 50%;
 }
 
 .subtitle {
@@ -35,6 +36,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  display: flex;
 }
 
 .graph-info {
@@ -44,6 +46,7 @@
 .container {
   margin-top: 15px;
   display: flex;
+  height: 78%;
 }
 
 /* Graph Container */
